--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,11 @@
     "bootstrap": "^4.5.2",
     "classnames": "^2.2.6",
     "firebase": "^7.22.0",
+    "font-awesome": "^4.7.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
+    "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "reactstrap": "^8.6.0"
