--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,13 +13,16 @@
     "classnames": "^2.2.6",
     "firebase": "^7.22.0",
     "font-awesome": "^4.7.0",
+    "formik": "^2.2.5",
+    "history": "^5.0.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "reactstrap": "^8.6.0"
+    "reactstrap": "^8.6.0",
+    "yup": "^0.30.0"
   },
   "scripts": {
     "start": "react-scripts start",
